--- a/tox.ini
+++ b/tox.ini
@@ -63,7 +63,7 @@ allowlist_externals =
 commands =
     mkdir -p test-results
     py{37,38,39,310}:     python -m pytest {env:CI_PYTEST_SPLIT_ARGS:} -n={env:CI_PYTEST_PARALLEL:10} --durations=20 --reruns 3 --reruns-delay 1 --junitxml=test-results/junit.xml --cov-config=.coveragerc --cov --cov-report= --no-cov-on-fail {posargs:tests/pytest_tests}
-    pylaunch:                python -m pytest {env:CI_PYTEST_SPLIT_ARGS:} -n={env:CI_PYTEST_PARALLEL:4} --durations=20 --reruns 3 --reruns-delay 1 --junitxml=test-results/junit.xml --cov-config=.coveragerc --cov --cov-report= --no-cov-on-fail {posargs:tests/pytest_tests/unit_tests_old/tests_launch/}
+    pylaunch:             python -m pytest {env:CI_PYTEST_SPLIT_ARGS:} -n={env:CI_PYTEST_PARALLEL:4} --durations=20 --reruns 3 --reruns-delay 1 --junitxml=test-results/junit.xml --cov-config=.coveragerc --cov --cov-report= --no-cov-on-fail {posargs:tests/pytest_tests/unit_tests_old/tests_launch/}
 
 [testenv:unit-s_nb-py{37,38,39,310}]
 deps =
@@ -84,7 +84,7 @@ passenv =
 commands =
     s_nb: ipython kernel install --user --name=wandb_python
     mkdir -p test-results
-    python -m pytest {env:CI_PYTEST_SPLIT_ARGS:} -n={env:CI_PYTEST_PARALLEL:{env:WB_UNIT_PARALLEL:4}} --durations=20 --reruns 3 --reruns-delay 1 --junitxml=test-results/junit.xml --cov-config=.coveragerc --cov --cov-report= --no-cov-on-fail --timeout 300 {posargs:tests/pytest_tests/unit_tests_old/tests_{env:WB_UNIT_SHARD}/}
+    python -m pytest {env:CI_PYTEST_SPLIT_ARGS:} -n={env:CI_PYTEST_PARALLEL:{env:WB_UNIT_PARALLEL:4}} --durations=20 --reruns 3 --reruns-delay 1 --junitxml=test-results/junit.xml --cov-config=.coveragerc --cov --cov-report= --no-cov-on-fail --timeout 300 {posargs:tests/pytest_tests/unit_tests_old/tests_{env:WB_UNIT_SHARD}}
 
 [testenv:dev]
 usedevelop = true
