--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@ xcuserdata/
 test-results/
 mypy-results/
 cover-results/
-wandb/proto_check/
+src/proto_check/
 .idea/
 .yea-requirements.txt
 .yeadoc/
