--- a/.yearc
+++ b/.yearc
@@ -5,10 +5,10 @@ test_paths =
   tests/standalone_tests/
 
 yeadoc_paths =
-  wandb/
+  src/
 
 coverage_config_template = tests/functional_tests/.coveragerc
-coverage_source = wandb/
+coverage_source = src/
 coverage_source_env = YEACOV_SOURCE
 
 results_file = test-results/junit-yea.xml
