--- a/mypy.ini
+++ b/mypy.ini
@@ -5,7 +5,7 @@
 [mypy]
 warn_redundant_casts = True
 exclude = (?x)(
-    wandb/vendor/.
+    src/vendor/.
   )
 
 [mypy-wandb.*]
@@ -178,7 +178,7 @@ disallow_untyped_defs = False
 warn_return_any = False
 
 # -----------------------------
-# Overrides: wandb/sdk/wandb_*
+# Overrides: src/sdk/wandb_*
 # -----------------------------
 
 [mypy-wandb.sdk.wandb_run]
@@ -237,7 +237,7 @@ ignore_errors = True
 ignore_errors = True
 
 # -----------------------------
-# wandb/sdk/data_types/
+# src/sdk/data_types/
 # -----------------------------
 
 [mypy-wandb.sdk.data_types]
@@ -250,7 +250,7 @@ disallow_untyped_calls = False
 ignore_errors = True
 
 # -----------------------------
-# wandb/sdk/interface/
+# src/sdk/interface/
 # -----------------------------
 
 [mypy-wandb.sdk.interface.artifacts]
@@ -260,7 +260,7 @@ ignore_errors = True
 ignore_errors = True
 
 # -----------------------------
-# wandb/sdk/internal/
+# src/sdk/internal/
 # -----------------------------
 
 [mypy-wandb.sdk.internal.tpu]
@@ -335,7 +335,7 @@ disallow_untyped_calls = False
 disallow_untyped_calls = False
 
 # -----------------------------
-# wandb/sdk/lib/
+# src/sdk/lib/
 # -----------------------------
 
 [mypy-wandb.sdk.lib.sparkline]
@@ -409,7 +409,7 @@ ignore_errors = True
 ignore_errors = True
 
 # -----------------------------
-# wandb/apis/reports/
+# src/apis/reports/
 # -----------------------------
 
 [mypy-wandb.apis.reports.*]
@@ -417,7 +417,7 @@ ignore_errors = True
 
 
 # -----------------------------
-# wandb/proto/
+# src/proto/
 # -----------------------------
 
 [mypy-wandb.proto.*]
@@ -425,7 +425,7 @@ ignore_errors = True
 ignore_missing_imports = True
 
 # -----------------------------
-# wandb/docker/
+# src/docker/
 # -----------------------------
 
 [mypy-wandb.docker.*]
