--- a/tox.ini
+++ b/tox.ini
@@ -141,14 +141,14 @@ deps =
     protocheck4: mypy-protobuf==3.4.0
     protocheck4: grpcio==1.50.0
     protocheck4: grpcio-tools==1.50.0
-changedir={toxinidir}/wandb/proto
+changedir={toxinidir}/src/proto
 commands=
-    rm -rf {toxinidir}/wandb/proto_check/
-    protocheck3: cp -r {toxinidir}/wandb/proto/v3/ {toxinidir}/wandb/proto_check/
-    protocheck4: cp -r {toxinidir}/wandb/proto/v4/ {toxinidir}/wandb/proto_check/
+    rm -rf {toxinidir}/src/proto_check/
+    protocheck3: cp -r {toxinidir}/src/proto/v3/ {toxinidir}/src/proto_check/
+    protocheck4: cp -r {toxinidir}/src/proto/v4/ {toxinidir}/src/proto_check/
     python wandb_internal_codegen.py
-    protocheck3: diff {toxinidir}/wandb/proto/v3/ {toxinidir}/wandb/proto_check/
-    protocheck4: diff {toxinidir}/wandb/proto/v4/ {toxinidir}/wandb/proto_check/
+    protocheck3: diff {toxinidir}/src/proto/v3/ {toxinidir}/src/proto_check/
+    protocheck4: diff {toxinidir}/src/proto/v4/ {toxinidir}/src/proto_check/
 
 [testenv:proto{3,4}]
 basepython=python3
@@ -161,7 +161,7 @@ deps =
     proto4: mypy-protobuf==3.4.0
     proto4: grpcio==1.50.0
     proto4: grpcio-tools==1.50.0
-changedir={toxinidir}/wandb/proto
+changedir={toxinidir}/src/proto
 commands=
     proto{3,4}: python wandb_internal_codegen.py
 
@@ -256,21 +256,21 @@ basepython = python3
 skip_install = true
 deps= {[black]deps}
 commands =
-    black wandb/ tests/ tools/
+    black src/ tests/ tools/
 
 [testenv:black]
 basepython = python3
 skip_install = true
 deps = {[black]deps}
 commands =
-    black --check wandb/ tests/ tools/
+    black --check src/ tests/ tools/
 
 [testenv:blackdiff]
 basepython = python3
 skip_install = true
 deps = {[black]deps}
 commands =
-    black --diff wandb/ tests/ tools/
+    black --diff src/ tests/ tools/
 
 [testenv:pyupgrade]
 basepython=python3
@@ -326,7 +326,7 @@ commands =
     /usr/bin/env bash -c '{envpython} -m coverage combine {toxworkdir}/py*/.coverage*'
     coverage xml --ignore-errors
     cp .coverage coverage.xml cover-results/
-    coverage report --ignore-errors --skip-covered --omit "wandb/vendor/*"
+    coverage report --ignore-errors --skip-covered --omit "src/vendor/*"
     codecov -e TOXENV -F unittest
 
 # temporary until we can consolidate coverage collection paths
@@ -349,7 +349,7 @@ commands =
     /usr/bin/env bash -c '{envpython} -m coverage combine {toxworkdir}/unit-s*-py*/.coverage*'
     /usr/bin/env bash -c '{envpython} -m coverage xml --ignore-errors'
     cp .coverage coverage.xml cover-results/
-    coverage report --ignore-errors --skip-covered --include "wandb/*" --omit "wandb/vendor/*"
+    coverage report --ignore-errors --skip-covered --include "src/*" --omit "src/vendor/*"
     codecov -e TOXENV -F unittest
 
 # temporary until we can consolidate coverage collection paths
@@ -367,7 +367,7 @@ commands =
     /usr/bin/env bash -c '{envpython} -m coverage combine {toxworkdir}/unit-s*-py*/.coverage*'
     coverage xml --ignore-errors
     cp .coverage coverage.xml cover-results/
-    coverage report -m --ignore-errors --skip-covered --omit "wandb/vendor/*"
+    coverage report -m --ignore-errors --skip-covered --omit "src/vendor/*"
 
 # hack until we figure out how to do better path conversions for windows
 [testenv:wincovercircle]
@@ -389,7 +389,7 @@ commands =
     bash.exe -c '~/project/.tox/wincovercircle/Scripts/python.exe -m coverage combine ~/project/.tox/py39/.coverage*'
     bash.exe -c '~/project/.tox/wincovercircle/Scripts/python.exe -m coverage xml'
     bash.exe -c 'cp .coverage coverage.xml cover-results/'
-    bash.exe -c '~/project/.tox/wincovercircle/Scripts/python.exe -m coverage report --ignore-errors --skip-covered --omit "wandb/vendor/*"'
+    bash.exe -c '~/project/.tox/wincovercircle/Scripts/python.exe -m coverage report --ignore-errors --skip-covered --omit "src/vendor/*"'
     bash.exe -c '~/project/.tox/wincovercircle/Scripts/python.exe -m codecov -e TOXENV -F unittest'
 
 [testenv:cover]
@@ -405,7 +405,7 @@ commands =
     /usr/bin/env bash -c '{envpython} -m coverage combine {toxworkdir}/py*/.coverage*'
     coverage xml --ignore-errors
     cp .coverage coverage.xml cover-results/
-    coverage report -m --ignore-errors --skip-covered --omit "wandb/vendor/*"
+    coverage report -m --ignore-errors --skip-covered --omit "src/vendor/*"
 
 [testenv:func-s_{base,sklearn,metaflow,tf115,tf21,tf24,tf25,tf26,ray112,ray2,service,py310,docs,imports1,imports2,imports3,imports4,imports5,imports6,imports7,imports8,imports9,imports10,imports11,imports12,noml,grpc,kfp}-{py36,py37,py38,py39,py310}]
 install_command = pip install --extra-index-url https://download.pytorch.org/whl/cpu {opts} {packages}
@@ -413,7 +413,7 @@ commands_pre =
 setenv =
     {[base]setenv}
     COVERAGE_FILE={envdir}/.coverage
-    YEACOV_SOURCE={envsitepackagesdir}/wandb/
+    YEACOV_SOURCE={envsitepackagesdir}/src/
     s_kfp: WB_PROBE_PACKAGE=true
 passenv =
     USERNAME
@@ -499,7 +499,7 @@ commands =
     /usr/bin/env bash -c '{envpython} -m coverage combine {toxworkdir}/func-s*-py*/.coverage*'
     /usr/bin/env bash -c '{envpython} -m coverage xml --ignore-errors'
     cp .coverage coverage.xml cover-results/
-    coverage report --ignore-errors --skip-covered --include "wandb/*" --omit "wandb/vendor/*"
+    coverage report --ignore-errors --skip-covered --include "src/*" --omit "src/vendor/*"
     codecov -e TOXENV -F functest
 
 [testenv:standalone-{cpu,gpu,tpu,local}-py{36,37,38,39,310}]
@@ -508,7 +508,7 @@ commands_pre =
 setenv =
     {[base]setenv}
     COVERAGE_FILE={envdir}/.coverage
-    YEACOV_SOURCE={envsitepackagesdir}/wandb/
+    YEACOV_SOURCE={envsitepackagesdir}/src/
     WANDB_PROJECT=standalone-{env:DATE}
 passenv =
     DATE
