Specify packages for isort, mypy, and codecov

--- a/tests/.isort.cfg
+++ b/tests/.isort.cfg
@@ -1,3 +1,3 @@
 [settings]
 profile=black
-known_third_party=wandb
+known_third_party=wandb,wandb.apis,wandb.errors,wandb.integration,wandb.integration.catboost,wandb.integration.fastai,wandb.integration.gym,wandb.integration.keras,wandb.integration.kfp,wandb.integration.lightgbm,wandb.integration.metaflow,wandb.integration.prodigy,wandb.integration.sacred,wandb.integration.sagemaker,wandb.integration.sb3,wandb.integration.tensorboard,wandb.integration.tensorflow,wandb.integration.torch,wandb.integration.xgboost,wandb.sdk,wandb.sdk.internal,wandb.sdk.lib
