--- a/mypy.ini
+++ b/mypy.ini
@@ -8,13 +8,13 @@ exclude = (?x)(
     src/vendor/.
   )
 
-[mypy-wandb.*]
+[mypy-src.*]
 ignore_errors = True
 
-[mypy-wandb.testing.*]
+[mypy-src.testing.*]
 ignore_errors = True
 
-[mypy-wandb.env]
+[mypy-src.env]
 ignore_errors = False
 disallow_incomplete_defs = True
 disallow_untyped_defs = True
@@ -27,7 +27,7 @@ disallow_untyped_decorators = True
 strict_equality = True
 implicit_reexport = False
 
-[mypy-wandb.filesync.*]
+[mypy-src.filesync.*]
 ignore_errors = False
 disallow_incomplete_defs = True
 disallow_untyped_defs = True
@@ -40,7 +40,7 @@ disallow_untyped_decorators = True
 strict_equality = True
 implicit_reexport = False
 
-[mypy-wandb.util]
+[mypy-src.util]
 ignore_errors = False
 disallow_incomplete_defs = True
 disallow_untyped_defs = True
@@ -53,7 +53,7 @@ disallow_untyped_decorators = True
 strict_equality = True
 implicit_reexport = False
 
-[mypy-wandb.integration.catboost.*]
+[mypy-src.integration.catboost.*]
 ignore_errors = False
 disallow_incomplete_defs = True
 disallow_untyped_defs = True
@@ -66,7 +66,7 @@ disallow_untyped_decorators = True
 strict_equality = True
 implicit_reexport = False
 
-[mypy-wandb.integration.lightgbm.*]
+[mypy-src.integration.lightgbm.*]
 ignore_errors = False
 disallow_incomplete_defs = True
 disallow_untyped_defs = True
@@ -79,7 +79,7 @@ disallow_untyped_decorators = True
 strict_equality = True
 implicit_reexport = False
 
-[mypy-wandb.integration.fastai.*]
+[mypy-src.integration.fastai.*]
 ignore_errors = False
 disallow_incomplete_defs = True
 disallow_untyped_defs = True
@@ -92,7 +92,7 @@ disallow_untyped_decorators = True
 strict_equality = True
 implicit_reexport = False
 
-[mypy-wandb.integration.keras.callbacks.*]
+[mypy-src.integration.keras.callbacks.*]
 ignore_errors = False
 disallow_incomplete_defs = True
 disallow_untyped_defs = True
@@ -104,20 +104,7 @@ disallow_untyped_decorators = True
 strict_equality = True
 implicit_reexport = False
 
-[mypy-wandb.integration.sb3.*]
-ignore_errors = False
-disallow_incomplete_defs = True
-disallow_untyped_defs = True
-warn_unused_ignores = True
-warn_return_any = True
-warn_unreachable = True
-check_untyped_defs = True
-# disallow_untyped_calls = True
-disallow_untyped_decorators = True
-strict_equality = True
-implicit_reexport = False
-
-[mypy-wandb.integration.tensorboard.*]
+[mypy-src.integration.sb3.*]
 ignore_errors = False
 disallow_incomplete_defs = True
 disallow_untyped_defs = True
@@ -130,7 +117,7 @@ disallow_untyped_decorators = True
 strict_equality = True
 implicit_reexport = False
 
-[mypy-wandb.integration.xgboost.*]
+[mypy-src.integration.tensorboard.*]
 ignore_errors = False
 disallow_incomplete_defs = True
 disallow_untyped_defs = True
@@ -143,7 +130,20 @@ disallow_untyped_decorators = True
 strict_equality = True
 implicit_reexport = False
 
-[mypy-wandb.sdk.*]
+[mypy-src.integration.xgboost.*]
+ignore_errors = False
+disallow_incomplete_defs = True
+disallow_untyped_defs = True
+warn_unused_ignores = True
+warn_return_any = True
+warn_unreachable = True
+check_untyped_defs = True
+# disallow_untyped_calls = True
+disallow_untyped_decorators = True
+strict_equality = True
+implicit_reexport = False
+
+[mypy-src.sdk.*]
 ignore_errors = False
 disallow_incomplete_defs = True
 disallow_untyped_defs = True
@@ -156,23 +156,23 @@ disallow_untyped_decorators = True
 strict_equality = True
 implicit_reexport = False
 
-[mypy-wandb.sdk.backend.*]
+[mypy-src.sdk.backend.*]
 
-[mypy-wandb.sdk.integration_utils.*]
+[mypy-src.sdk.integration_utils.*]
 ignore_errors = True
 
-[mypy-wandb.sdk.interface.*]
+[mypy-src.sdk.interface.*]
 
-[mypy-wandb.sdk.internal.*]
+[mypy-src.sdk.internal.*]
 
-[mypy-wandb.sdk.launch.*]
+[mypy-src.sdk.launch.*]
 disallow_untyped_calls = False
 
-[mypy-wandb.sdk.lib.*]
+[mypy-src.sdk.lib.*]
 
-[mypy-wandb.sdk.service.*]
+[mypy-src.sdk.service.*]
 
-[mypy-wandb.sdk.verify.*]
+[mypy-src.sdk.verify.*]
 disallow_untyped_calls = False
 disallow_untyped_defs = False
 warn_return_any = False
@@ -181,94 +181,94 @@ warn_return_any = False
 # Overrides: src/sdk/wandb_*
 # -----------------------------
 
-[mypy-wandb.sdk.wandb_run]
+[mypy-src.sdk.wandb_run]
 warn_return_any = False
 warn_unreachable = False
 check_untyped_defs = False
 disallow_untyped_calls = False
 
-[mypy-wandb.sdk.wandb_watch]
+[mypy-src.sdk.wandb_watch]
 ignore_errors = True
 
-[mypy-wandb.sdk.wandb_init]
+[mypy-src.sdk.wandb_init]
 disallow_untyped_calls = False
 
-[mypy-wandb.sdk.wandb_login]
+[mypy-src.sdk.wandb_login]
 ignore_errors = True
 
-[mypy-wandb.sdk.wandb_sweep]
+[mypy-src.sdk.wandb_sweep]
 disallow_untyped_calls = False
 disallow_untyped_defs = False
 disallow_incomplete_defs = False
 warn_return_any = False
 
-[mypy-wandb.sdk.wandb_config]
+[mypy-src.sdk.wandb_config]
 disallow_incomplete_defs = False
 disallow_untyped_defs = False
 disallow_untyped_calls = False
 
-[mypy-wandb.sdk.wandb_history]
+[mypy-src.sdk.wandb_history]
 disallow_untyped_defs = False
 disallow_untyped_calls = False
 
-[mypy-wandb.sdk.wandb_helper]
+[mypy-src.sdk.wandb_helper]
 disallow_untyped_calls = False
 disallow_untyped_defs = False
 
-[mypy-wandb.sdk.wandb_require]
+[mypy-src.sdk.wandb_require]
 disallow_untyped_calls = False
 
-[mypy-wandb.sdk.wandb_settings]
+[mypy-src.sdk.wandb_settings]
 disallow_untyped_calls = False
 
-[mypy-wandb.sdk.wandb_artifacts]
+[mypy-src.sdk.wandb_artifacts]
 disallow_untyped_calls = False
 
-[mypy-wandb.sdk.wandb_alerts]
+[mypy-src.sdk.wandb_alerts]
 disallow_untyped_calls = False
 
-[mypy-wandb.sdk.wandb_summary]
+[mypy-src.sdk.wandb_summary]
 ignore_errors = True
 
-[mypy-wandb.sdk.wandb_setup]
+[mypy-src.sdk.wandb_setup]
 ignore_errors = True
 
-[mypy-wandb.sdk.wandb_save]
+[mypy-src.sdk.wandb_save]
 ignore_errors = True
 
 # -----------------------------
 # src/sdk/data_types/
 # -----------------------------
 
-[mypy-wandb.sdk.data_types]
+[mypy-src.sdk.data_types]
 disallow_untyped_calls = False
 
-[mypy-wandb.sdk.data_types.*]
+[mypy-src.sdk.data_types.*]
 disallow_untyped_calls = False
 
-[mypy-wandb.sdk.data_types._dtypes]
+[mypy-src.sdk.data_types._dtypes]
 ignore_errors = True
 
 # -----------------------------
 # src/sdk/interface/
 # -----------------------------
 
-[mypy-wandb.sdk.interface.artifacts]
+[mypy-src.sdk.interface.artifacts]
 ignore_errors = True
 
-[mypy-wandb.sdk.interface.summary_record]
+[mypy-src.sdk.interface.summary_record]
 ignore_errors = True
 
 # -----------------------------
 # src/sdk/internal/
 # -----------------------------
 
-[mypy-wandb.sdk.internal.tpu]
+[mypy-src.sdk.internal.tpu]
 disallow_untyped_defs = False
 disallow_untyped_calls = False
 warn_unused_ignores = False
 
-[mypy-wandb.sdk.internal.internal_api]
+[mypy-src.sdk.internal.internal_api]
 ignore_errors = False
 disallow_incomplete_defs = True
 disallow_untyped_defs = True
@@ -281,76 +281,76 @@ disallow_untyped_decorators = True
 strict_equality = True
 implicit_reexport = False
 
-[mypy-wandb.sdk.internal.meta]
+[mypy-src.sdk.internal.meta]
 disallow_untyped_defs = False
 disallow_untyped_calls = False
 
-[mypy-wandb.sdk.internal.run]
+[mypy-src.sdk.internal.run]
 disallow_untyped_defs = False
 disallow_untyped_calls = False
 
-[mypy-wandb.sdk.internal.update]
+[mypy-src.sdk.internal.update]
 ignore_errors = False
 
-[mypy-wandb.sdk.internal.profiler]
+[mypy-src.sdk.internal.profiler]
 disallow_untyped_calls = False
 disallow_untyped_defs = False
 
-[mypy-wandb.sdk.internal.sample]
+[mypy-src.sdk.internal.sample]
 disallow_untyped_defs = False
 disallow_untyped_calls = False
 
-[mypy-wandb.sdk.internal.progress]
+[mypy-src.sdk.internal.progress]
 disallow_untyped_defs = False
 disallow_untyped_calls = False
 
-[mypy-wandb.sdk.internal.datastore]
+[mypy-src.sdk.internal.datastore]
 ignore_errors = True
 
-[mypy-wandb.sdk.internal.file_stream]
+[mypy-src.sdk.internal.file_stream]
 ignore_errors = False
 
-[mypy-wandb.sdk.internal.file_pusher]
+[mypy-src.sdk.internal.file_pusher]
 disallow_incomplete_defs = False
 disallow_untyped_defs = False
 disallow_untyped_calls = False
 check_untyped_defs = False
 
-[mypy-wandb.sdk.internal.handler]
+[mypy-src.sdk.internal.handler]
 disallow_untyped_calls = False
 
-[mypy-wandb.sdk.internal.sender]
+[mypy-src.sdk.internal.sender]
 disallow_untyped_calls = False
 
-[mypy-wandb.sdk.internal.tb_watcher]
+[mypy-src.sdk.internal.tb_watcher]
 disallow_untyped_calls = False
 
-[mypy-wandb.sdk.internal.stats]
+[mypy-src.sdk.internal.stats]
 disallow_untyped_calls = False
 
-[mypy-wandb.sdk.internal.internal]
+[mypy-src.sdk.internal.internal]
 disallow_untyped_calls = False
 
-[mypy-wandb.sdk.internal.artifacts]
+[mypy-src.sdk.internal.artifacts]
 disallow_untyped_calls = False
 
 # -----------------------------
 # src/sdk/lib/
 # -----------------------------
 
-[mypy-wandb.sdk.lib.sparkline]
+[mypy-src.sdk.lib.sparkline]
 disallow_untyped_defs = False
 disallow_untyped_calls = False
 
-[mypy-wandb.sdk.lib.disabled]
+[mypy-src.sdk.lib.disabled]
 disallow_untyped_defs = False
 disallow_untyped_calls = False
 
-[mypy-wandb.sdk.lib.lazyloader]
+[mypy-src.sdk.lib.lazyloader]
 disallow_untyped_defs = False
 disallow_untyped_calls = False
 
-[mypy-wandb.sdk.lib.retry]
+[mypy-src.sdk.lib.retry]
 ignore_errors = False
 disallow_incomplete_defs = True
 disallow_untyped_defs = True
@@ -363,56 +363,56 @@ disallow_untyped_decorators = True
 strict_equality = True
 implicit_reexport = False
 
-[mypy-wandb.sdk.lib.config_util]
+[mypy-src.sdk.lib.config_util]
 disallow_untyped_defs = False
 disallow_untyped_calls = False
 
-[mypy-wandb.sdk.lib.apikey]
+[mypy-src.sdk.lib.apikey]
 disallow_untyped_defs = False
 disallow_untyped_calls = False
 
-[mypy-wandb.sdk.lib.server]
+[mypy-src.sdk.lib.server]
 disallow_untyped_defs = False
 disallow_untyped_calls = False
 
-[mypy-wandb.sdk.lib.module]
+[mypy-src.sdk.lib.module]
 disallow_untyped_defs = False
 disallow_untyped_calls = False
 
-[mypy-wandb.sdk.lib.file_stream_utils]
+[mypy-src.sdk.lib.file_stream_utils]
 disallow_untyped_defs = False
 disallow_untyped_calls = False
 
-[mypy-wandb.sdk.lib.timed_input]
+[mypy-src.sdk.lib.timed_input]
 disallow_untyped_calls = False
 
-[mypy-wandb.sdk.lib.console]
+[mypy-src.sdk.lib.console]
 disallow_untyped_defs = False
 
-[mypy-wandb.sdk.lib.redirect]
+[mypy-src.sdk.lib.redirect]
 ignore_errors = True
 
-[mypy-wandb.sdk.lib.preinit]
+[mypy-src.sdk.lib.preinit]
 ignore_errors = False
 disallow_untyped_calls = False
 
-[mypy-wandb.sdk.lib.reporting]
+[mypy-src.sdk.lib.reporting]
 ignore_errors = True
 
-[mypy-wandb.sdk.lib.git]
+[mypy-src.sdk.lib.git]
 ignore_errors = True
 
-[mypy-wandb.sdk.lib.handler_util]
+[mypy-src.sdk.lib.handler_util]
 ignore_errors = True
 
-[mypy-wandb.sdk.lib.ipython]
+[mypy-src.sdk.lib.ipython]
 ignore_errors = True
 
 # -----------------------------
 # src/apis/reports/
 # -----------------------------
 
-[mypy-wandb.apis.reports.*]
+[mypy-src.apis.reports.*]
 ignore_errors = True
 
 
@@ -420,7 +420,7 @@ ignore_errors = True
 # src/proto/
 # -----------------------------
 
-[mypy-wandb.proto.*]
+[mypy-src.proto.*]
 ;ignore_errors = False
 ignore_missing_imports = True
 
@@ -428,7 +428,7 @@ ignore_missing_imports = True
 # src/docker/
 # -----------------------------
 
-[mypy-wandb.docker.*]
+[mypy-src.docker.*]
 ignore_errors = False
 disallow_incomplete_defs = True
 disallow_untyped_defs = True
@@ -458,5 +458,5 @@ ignore_missing_imports = True
 [mypy-setproctitle.*]
 ignore_missing_imports = True
 
-[mypy-wandb.vendor.*]
+[mypy-src.vendor.*]
 ignore_missing_imports = True
