--- a/.coveragerc
+++ b/.coveragerc
@@ -1,20 +1,20 @@
 [paths]
 canonicalsrc =
     src/
-    .tox/func-s_base-py37/lib/python3.7/site-packages/src/
-    .tox/func-s_docs-py37/lib/python3.7/site-packages/src/
-    .tox/func-s_grpc-py37/lib/python3.7/site-packages/src/
-    .tox/func-s_metaflow-py37/lib/python3.7/site-packages/src/
-    .tox/func-s_noml-py37/lib/python3.7/site-packages/src/
-    .tox/func-s_ray112-py37/lib/python3.7/site-packages/src/
-    .tox/func-s_ray2-py37/lib/python3.7/site-packages/src/
-    .tox/func-s_service-py37/lib/python3.7/site-packages/src/
-    .tox/func-s_sklearn-py37/lib/python3.7/site-packages/src/
-    .tox/func-s_tf115-py37/lib/python3.7/site-packages/src/
-    .tox/func-s_tf21-py37/lib/python3.7/site-packages/src/
-    .tox/func-s_tf24-py37/lib/python3.7/site-packages/src/
-    .tox/func-s_tf25-py37/lib/python3.7/site-packages/src/
-    .tox/func-s_tf26-py37/lib/python3.7/site-packages/src/
+    .tox/func-s_base-py37/lib/python3.7/site-packages/wandb/
+    .tox/func-s_docs-py37/lib/python3.7/site-packages/wandb/
+    .tox/func-s_grpc-py37/lib/python3.7/site-packages/wandb/
+    .tox/func-s_metaflow-py37/lib/python3.7/site-packages/wandb/
+    .tox/func-s_noml-py37/lib/python3.7/site-packages/wandb/
+    .tox/func-s_ray112-py37/lib/python3.7/site-packages/wandb/
+    .tox/func-s_ray2-py37/lib/python3.7/site-packages/wandb/
+    .tox/func-s_service-py37/lib/python3.7/site-packages/wandb/
+    .tox/func-s_sklearn-py37/lib/python3.7/site-packages/wandb/
+    .tox/func-s_tf115-py37/lib/python3.7/site-packages/wandb/
+    .tox/func-s_tf21-py37/lib/python3.7/site-packages/wandb/
+    .tox/func-s_tf24-py37/lib/python3.7/site-packages/wandb/
+    .tox/func-s_tf25-py37/lib/python3.7/site-packages/wandb/
+    .tox/func-s_tf26-py37/lib/python3.7/site-packages/wandb/
 
 [run]
 # TODO(jhr): enable this in the future
