--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ['setuptools<=63.4.3']
+requires = ['setuptools==63.4.3']
 build-backend = "setuptools.build_meta"
 
 [tool.black]
