added artifact registry to requirements
added tests for gcp artifact registry

fixed docker image name regex

--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -53,6 +53,7 @@ boto3
 botocore
 google-cloud-storage
 google-cloud-compute
+google-cloud-artifact-registry
 kubernetes
 # ^^^^^^^^^^ - above are for extra launch
 # .[sweeps]; sys_platform != 'darwin' or (sys_platform == 'darwin' and platform.machine != 'arm64')
