--- a/tox.ini
+++ b/tox.ini
@@ -34,6 +34,7 @@ deps =
     pytest-flakefinder
     pytest-rerunfailures
     parameterized
+    respx>=0.20.0  # 0.21.0 dropped Python 3.6; we can upgrade once we drop it too
 
 [unitshardbase]
 deps =
