--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -35,6 +35,7 @@ xgboost
 lightgbm
 rdkit-pypi; sys_platform != 'darwin' or (sys_platform == 'darwin' and platform.machine != 'arm64')
 rdkit-pypi; python_version > '3.7' and sys_platform == 'darwin' and platform.machine == 'arm64'
+httpx>=0.22.0  # 0.23.0 dropped Python 3.6; we can upgrade once we drop it too
 respx>=0.20.0  # 0.21.0 dropped Python 3.6; we can upgrade once we drop it too
 
 # TODO: fix extra dependencies
