--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,8 +14,47 @@ wandb/vendor/
 | .tox/
 '''
 
-[tool.isort]
-profile = "black"
-skip = ["wandb/__init__.py"]
-extend_skip_glob = ["wandb/vendor/**", "wandb/proto/**"]
-skip_gitignore = "True"
+[tool.ruff]
+select = ["F", "E", "W", "B", "I", "N", "C90"]
+ignore = ["B904", "E501"]
+exclude = [
+    "tests/functional_tests/t0_main/fastai/t1_v1.py",
+    "tests/functional_tests/t0_main/metaflow",
+    "tests/pytest_tests/assets/fixtures/train.py",
+    "tests/pytest_tests/unit_tests_old",
+    "wandb/__init__.py",
+    "wandb/bin",
+    "wandb/data",
+    "wandb/env.py",
+    "wandb/errors",
+    "wandb/integration/keras/keras.py",
+    "wandb/integration/magic.py",
+    "wandb/integration/metaflow",
+    "wandb/keras",
+    "wandb/offline-run-*",
+    "wandb/old",
+    "wandb/plots",
+    "wandb/proto_check",
+    "wandb/proto",
+    "wandb/run-*",
+    "wandb/sklearn",
+    "wandb/superagent",
+    "wandb/vendor",
+    "wandb/viz.py",
+    "wandb/wandb_torch.py",
+]
+target-version = "py37"
+
+[tool.ruff.per-file-ignores]
+"wandb/cli/cli.py" = ["C901"]
+"wandb/wandb_controller.py" = ["N803", "N806"]
+"wandb/filesync/step_checksum.py" = ["B023"]
+
+[tool.ruff.pydocstyle]
+convention = "google"
+
+[tool.ruff.pycodestyle]
+ignore-overlong-task-comments = true
+
+[tool.ruff.mccabe]
+max-complexity = 18
