try dropping respx from deps list in tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -34,7 +34,8 @@ deps =
     pytest-flakefinder
     pytest-rerunfailures
     parameterized
-    respx>=0.20.0  # 0.21.0 dropped Python 3.6; we can upgrade once we drop it too
+    # TODO(spencerpearson): is this necessary?
+    # respx>=0.20.0  # 0.21.0 dropped Python 3.6; we can upgrade once we drop it too
 
 [unitshardbase]
 deps =
