ckpt: kubernetes runner is working!
seems that the load_kube_config method will try to use
the awscli to get creds when you
are loading an eks config. I added awscli
as a dependency for launch.

--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -55,6 +55,7 @@ google-cloud-storage
 google-cloud-compute
 google-cloud-artifact-registry
 kubernetes
+awscli
 # ^^^^^^^^^^ - above are for extra launch
 # .[sweeps]; sys_platform != 'darwin' or (sys_platform == 'darwin' and platform.machine != 'arm64')
 # vvvvvvvvvv - below are for extra sweeps
